# MasterThesis

CPPSimulationBasicPrimitives/: CMakeLists.txt  README.md  dqrobotics_dependencies.cmake
CPPSimulationBasicPrimitives/config/: parameter.yml
CPPSimulationBasicPrimitives/include/: InverseKinematic.h  ManiQPHuman.h  QuadraticProgramming.h  RealSenseRobot.h  convert_csv2matrix.h  convert_matrix2csv.h  fik.h  franka_ik_He copy.hpp  franka_ik_He.hpp  geomJac.h  jacobianEst.h  jacobianEstVector.h  logmap.h  manipulabilityJacobian.h
CPPSimulationBasicPrimitives/src/: FrankaRobot.cpp  InverseKinematic.cpp  Joints_limit_sample.cpp  ManiQP.cpp  ManiQPHuman.cpp  QuadraticProgramming.cpp  RealSenseRobot.cpp  convert_csv2matrix.cpp  convert_matrix2csv.cpp  fik.cpp  geomJac.cpp  jacobianEst.cpp  jacobianEstVector.cpp  logmap.cpp  redManipulabilityJacobian.cpp
PUSH_SIDE/: AppliedDataM.m  AppliedData_7Joint.m  ProcessedData.py
PUSH_SIDE/Functions/mani_qp_plot_matlab/: README.md  force_plot.asv  force_plot.m  force_plot_bessel.asv  force_plot_bessel_selfdesign.m  force_plot_withNormalization.asv  force_plot_withNormalization.m  human_position_checking.asv  human_position_checking.m  human_rotation_angle_axis_checking.m  human_rotation_checking.m  jaco_eigen_checking.m  mani_eigen_checking.m  mani_volum_checking.asv  mani_volum_checking.m  plot_csv.asv  plot_csv.m
PUSH_SIDE/Functions/mani_qp_plot_matlab/function/: geomJ.m  geomJ8.m  human_geom.m  plotGMM.m  plotGMM3D.asv  plotGMM3D.m
PUSH_SIDE/Functions/mani_qp_plot_matlab/problem/: catesianposition.fig  eigenvalue.fig  joint acceleration.fig  joint position.fig  joint velocitz.fig  mani distance.fig
PUSH_SIDE/Robot/: RealSenseRobot.m  RealSenseRobotTrans7DoF.m
PUSH_SIDE/data_2/1-original_data/Exp_2/: prediction.txt
PUSH_SIDE/data_3/1-original_data/Exp_2/: prediction.txt
human2robot-manipulability-domain-adaptation/: CMakeLists.txt  command  map_dataset.sh  testfile_generation.py
human2robot-manipulability-domain-adaptation/include/: Franka.h  control.h
human2robot-manipulability-domain-adaptation/matlab/: map_manipulabilities.m
human2robot-manipulability-domain-adaptation/py/: generate_artificial_data_r_s_t.py  plot_artificial_data.py  run_icp.py
human2robot-manipulability-domain-adaptation/src/: Franka.cpp  control.cpp
